--- a/LUJEWebsite.app/Pages/Communities.cshtml
+++ b/LUJEWebsite.app/Pages/Communities.cshtml
@@ -55,6 +55,14 @@
 			<td>212855:6:2</td>
 			<td width="100%">received from IPng Networks GmbH</td>
 		</tr>
+		<tr>
+			<td>212855:6:3</td>
+			<td width="100%">received from FREETRANSIT</td>
+		</tr>
+		<tr>
+			<td>212855:6:4</td>
+			<td width="100%">received from NetOne NL</td>
+		</tr>
 	</table>
 						
 	<table width="100%">
