--- a/LUJEWebsite.app/Pages/Portal/Action.cshtml
+++ b/LUJEWebsite.app/Pages/Portal/Action.cshtml
@@ -41,10 +41,11 @@ else
 		string peeringdb_id = "";
 		string lanid = "";
 		string addrid = "";
+		string oaddrid = "";
 		string addrv = "";
 
 		NpgsqlCommand luje_cmd = new NpgsqlCommand("select peeringdb_network.id, peeringdb_network.name from peeringdb_network where asn = @asn;", luje_conn);
-		luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, asnQuery);
+		luje_cmd.Parameters.AddWithValue("@asn", NpgsqlDbType.Integer, Convert.ToInt32(asnQuery));
 		luje_cmd.Prepare();
 		NpgsqlDataReader luje_rdr = luje_cmd.ExecuteReader();
 
@@ -69,6 +70,12 @@ else
 			Response.Redirect("/portal/manual?asn=" + asnQuery);
 			return;
 		}
+		oaddrid = HttpContext.Request.Query["oaddrid"];
+		if (oaddrid == "")
+		{
+			Response.Redirect("/portal/manual?asn=" + asnQuery);
+			return;
+		}
 		addrv = HttpContext.Request.Query["v"];
 		if (addrv != "4" && addrv != "6")
 		{
@@ -82,9 +89,10 @@ else
 			return;
 		}
 
-		luje_cmd = new NpgsqlCommand("select peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6 from peeringdb_network_ixlan where asn = @portalowner and ixlan_id = @lanid;", luje_conn);
+		luje_cmd = new NpgsqlCommand("select peeringdb_network_ixlan.ixlan_id, peeringdb_network_ixlan.ipaddr4, peeringdb_network_ixlan.ipaddr6 from peeringdb_network_ixlan where asn = @portalowner and ixlan_id = @lanid and id = @oaddrid;", luje_conn);
 		luje_cmd.Parameters.AddWithValue("@portalowner", NpgsqlDbType.Integer, Convert.ToInt32(Configuration.PortalOwnerAsn));
 		luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
+		luje_cmd.Parameters.AddWithValue("@oaddrid", NpgsqlDbType.Integer, Convert.ToInt32(oaddrid));
 		luje_cmd.Prepare();
 		luje_rdr = luje_cmd.ExecuteReader();
 		if (luje_rdr.Read())
@@ -209,48 +217,62 @@ else
 			luje_rdr.Close();
 		}
 
-		luje_cmd = new NpgsqlCommand("select peering_ips_active, peering_ips_deployed, peering_ips_id, peering_id from peering_ips inner join peering on peering.peering_id = peering_ips_peering_id and peering_deleted = false where peering_ips_peeringdb_lanid = @lanid and peering_ips_peeringdb_addrid = @addrid and peering_ips_type = @type and peering_peeringdb_id = @peeringdb_id and peering_ips_deleted = false;", luje_conn);
+		luje_cmd = new NpgsqlCommand("select peering_ips_active, peering_ips_deployed, peering_ips_id, peering_id from peering_ips inner join peering on peering.peering_id = peering_ips_peering_id and peering_deleted = false where peering_ips_peeringdb_lanid = @lanid and peering_ips_peeringdb_addrid = @addrid and peering_ips_peeringdb_oaddrid = @oaddrid and peering_ips_type = @type and peering_peeringdb_id = @peeringdb_id and peering_ips_deleted = false;", luje_conn);
 		luje_cmd.Parameters.AddWithValue("@peeringdb_id", NpgsqlDbType.Integer, Convert.ToInt32(peeringdb_id));
 		luje_cmd.Parameters.AddWithValue("@addrid", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
+		luje_cmd.Parameters.AddWithValue("@oaddrid", NpgsqlDbType.Integer, Convert.ToInt32(oaddrid));
 		luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
 		luje_cmd.Parameters.AddWithValue("@type", NpgsqlDbType.Integer, Convert.ToInt32(addrv));
 		luje_cmd.Prepare();
 		luje_rdr = luje_cmd.ExecuteReader();
-
+		
 		if (luje_rdr.Read())
 		{
 			string peering_ips_id = luje_rdr["peering_ips_id"].ToString();
 			luje_rdr.Close();
-			luje_cmd = new NpgsqlCommand("update peering_ips set peering_ips_deleted = true, peering_ips_modified = NOW() where peering_ips_id = @peering_ips_id and peering_ips_deleted = true;", luje_conn);
+			luje_cmd = new NpgsqlCommand("update peering_ips set peering_ips_deleted = true, peering_ips_modified = NOW() where peering_ips_id = @peering_ips_id and peering_ips_deleted = false;", luje_conn);
 			luje_cmd.Parameters.AddWithValue("@peering_ips_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_ips_id));
 			luje_cmd.Prepare();
 			luje_cmd.ExecuteNonQuery();
 
-			luje_cmd = new NpgsqlCommand("select peering.peering_id from peering_ips inner join peering on peering.peering_id = peering_ips.peering_ips_peering_id and peering.peering_deleted = false where peering_ips_deleted = 0 and peering.peering_id = @peering_id;", luje_conn);
-			luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
+			int count = 0;
+
+			luje_cmd = new NpgsqlCommand("select peering.peering_id from peering_ips inner join peering on peering.peering_id = peering_ips.peering_ips_peering_id and peering.peering_deleted = false where peering_ips_deleted = false and peering_ips_rejected = false and peering.peering_id = @id;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
 			luje_cmd.Prepare();
 			luje_rdr = luje_cmd.ExecuteReader();
-
 			if (!luje_rdr.Read())
 			{
-				luje_rdr.Close();
-				luje_cmd = new NpgsqlCommand("update peering set peering_deleted = true, peering_modified = NOW() where peering_id = @peering_id and peering_deleted = false;", luje_conn);
-				luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
+				count++;
+			}
+			luje_rdr.Close();
+
+			luje_cmd = new NpgsqlCommand("select peering.peering_id from peering_ips_extra inner join peering on peering.peering_id = peering_ips_extra.peering_ips_extra_peering_id and peering.peering_deleted = false where peering_ips_extra_deleted = false and peering.peering_id = @id;", luje_conn);
+			luje_cmd.Parameters.AddWithValue("@id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
+			luje_cmd.Prepare();
+			luje_rdr = luje_cmd.ExecuteReader();
+			if (!luje_rdr.Read())
+			{
+				count++;
+			}
+			luje_rdr.Close();
+
+			if (count == 2)
+			{
+				luje_cmd = new NpgsqlCommand("update peering set peering_deleted = true, peering_modified = NOW() where peering_id = @id and peering_deleted = false;", luje_conn);
+				luje_cmd.Parameters.AddWithValue("@id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
 				luje_cmd.Prepare();
 				luje_cmd.ExecuteNonQuery();
-			}
-			else
-			{
-				luje_rdr.Close();
 			}
 		}
 		else
 		{
 			luje_rdr.Close();
-			luje_cmd = new NpgsqlCommand("insert into peering_ips (peering_ips_peering_id, peering_ips_peeringdb_lanid, peering_ips_peeringdb_addrid, peering_ips_type, peering_ips_addr, peering_ips_active, peering_ips_rejected, peering_ips_deployed, peering_ips_notified, peering_ips_notified_approval, peering_ips_notified_skip, peering_ips_created, peering_ips_modified, peering_ips_deleted) values(@peering_id, @lanid, @addrid, @type, @addr, true, false, false, true, true, true, NOW(), NOW(), false);", luje_conn);
+			luje_cmd = new NpgsqlCommand("insert into peering_ips (peering_ips_peering_id, peering_ips_peeringdb_lanid, peering_ips_peeringdb_addrid, peering_ips_peeringdb_oaddrid, peering_ips_type, peering_ips_addr, peering_ips_active, peering_ips_rejected, peering_ips_deployed, peering_ips_notified, peering_ips_notified_approval, peering_ips_notified_skip, peering_ips_created, peering_ips_modified, peering_ips_deleted) values(@peering_id, @lanid, @addrid, @oaddrid, @type, @addr, true, false, false, true, true, true, NOW(), NOW(), false);", luje_conn);
 			luje_cmd.Parameters.AddWithValue("@peering_id", NpgsqlDbType.Integer, Convert.ToInt32(peering_id));
 			luje_cmd.Parameters.AddWithValue("@lanid", NpgsqlDbType.Integer, Convert.ToInt32(lanid));
 			luje_cmd.Parameters.AddWithValue("@addrid", NpgsqlDbType.Integer, Convert.ToInt32(addrid));
+			luje_cmd.Parameters.AddWithValue("@oaddrid", NpgsqlDbType.Integer, Convert.ToInt32(oaddrid));
 			luje_cmd.Parameters.AddWithValue("@type", NpgsqlDbType.Integer, Convert.ToInt32(addrv));
 			luje_cmd.Parameters.AddWithValue("@addr", NpgsqlDbType.Varchar, address);
 			luje_cmd.Prepare();
