--- a/LUJEWebsite.app/Pages/Shared/_Layout.cshtml
+++ b/LUJEWebsite.app/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 							<li><a href="/communities">BGP Communities</a></li>
 							<li><a href="/peers">Peers</a></li>
 							<li><a href="/portal/">Peering Portal</a></li>
+							<li><a href="/contact">Contact</a></li>
 						</ul>
 					</div>
 					@RenderBody()
