--- a/LUJEWebsite.app/Pages/Portal/Network.cshtml
+++ b/LUJEWebsite.app/Pages/Portal/Network.cshtml
@@ -167,10 +167,16 @@ where peeringdb_network_ixlan.asn = @asn;", luje_conn);
 										var matchingRouter = lan.Routers.FirstOrDefault(item => item.IPAddresses.Contains(entry.owneripaddr4));
 										if (matchingRouter != null)
 										{
-											var neighboorName = $"peer_AS{selectedNetwork.asn}_{lan.Name}_ipv4_{Utils.GetNeighborName(entry.ipaddr4)}";
-											var hostname = config.RouterMapping[matchingRouter.Name].Hostname;
-											var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighboorName);
-											status = Utils.GetInfoValue(birdlgOutput);
+											try {
+                                                var neighboorName = $"peer_AS{selectedNetwork.asn}_{lan.Name}_ipv4_{Utils.GetNeighborName(entry.ipaddr4)}";
+                                                var hostname = config.RouterMapping[matchingRouter.Name].Hostname;
+                                                var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighboorName);
+                                                status = Utils.GetInfoValue(birdlgOutput);
+                                            }
+                                            catch (Exception e)
+                                            {
+                                                status = "Deployed";
+                                            }
 										}
 										else
 										{
@@ -226,10 +232,16 @@ where peeringdb_network_ixlan.asn = @asn;", luje_conn);
 										var matchingRouter = lan.Routers.FirstOrDefault(item => item.IPAddresses.Contains(entry.owneripaddr6));
 										if (matchingRouter != null)
 										{
-											var neighboorName = $"peer_AS{selectedNetwork.asn}_{lan.Name}_ipv6_{Utils.GetNeighborName(entry.ipaddr6)}";
-											var hostname = config.RouterMapping[matchingRouter.Name].Hostname;
-											var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighboorName);
-											status = Utils.GetInfoValue(birdlgOutput);
+											try {
+                                                var neighboorName = $"peer_AS{selectedNetwork.asn}_{lan.Name}_ipv6_{Utils.GetNeighborName(entry.ipaddr6)}";
+                                                var hostname = config.RouterMapping[matchingRouter.Name].Hostname;
+                                                var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighboorName);
+                                                status = Utils.GetInfoValue(birdlgOutput);
+                                            }
+                                            catch (Exception e)
+                                            {
+                                                status = "Deployed";
+                                            }
 										}
 										else
 										{
@@ -299,10 +311,17 @@ where peeringdb_network_ixlan.asn = @asn;", luje_conn);
 						}
 						else if (Convert.ToBoolean(luje_rdr["peering_ips_extra_active"]) == true && Convert.ToBoolean(luje_rdr["peering_ips_extra_deployed"]) == true)
 						{
-							var neighborName = $"peer_AS{selectedNetwork.asn}_{matchingRouter.Subnet.Name}_ipv{matchingRouter.Subnet.Afi}_{Utils.GetNeighborName(ipAddressStr)}";
-							var hostname = matchingRouter.RouterValue.Hostname;
-							var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighborName);
-							status = Utils.GetInfoValue(birdlgOutput);
+							try
+							{
+								var neighborName = $"peer_AS{selectedNetwork.asn}_{matchingRouter.Subnet.Name}_ipv{matchingRouter.Subnet.Afi}_{Utils.GetNeighborName(ipAddressStr)}";
+								var hostname = matchingRouter.RouterValue.Hostname;
+								var birdlgOutput = await Utils.GetBirdProtocolStatus(hostname, neighborName);
+								status = Utils.GetInfoValue(birdlgOutput);
+							}
+							catch (Exception e)
+                            {
+								status = "Deployed";
+							}
 						}
 						<tr>
 							<td width="60%">Yours: @luje_rdr["peering_ips_extra_addr"].ToString()<br />Ours: @matchingRouter.Subnet.IPAddress</td>
